--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
-flask==3.0.2
+Flask==2.3.3
 flask-cors==4.0.0
-pandas==2.2.1
-openpyxl==3.1.2
+psycopg2-binary==2.9.7
+pandas==2.0.3
+gunicorn==21.2.0
